@@ -3,6 +3,7 @@ package dev.unnm3d.rediseconomy.command;
 import dev.unnm3d.rediseconomy.RedisEconomyPlugin;
 import dev.unnm3d.rediseconomy.utils.AdventureWebuiEditorAPI;
 import lombok.AllArgsConstructor;
+import lombok.SneakyThrows;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
@@ -11,7 +12,9 @@ import org.jetbrains.annotations.NotNull;
 
 import java.lang.reflect.Field;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @AllArgsConstructor
 public class MainCommand implements CommandExecutor, TabCompleter {
@@ -19,6 +22,7 @@ public class MainCommand implements CommandExecutor, TabCompleter {
     private AdventureWebuiEditorAPI adventureWebuiEditorAPI;
 
 
+    @SneakyThrows
     @Override
     public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
         if (args.length == 0) {
@@ -83,10 +87,10 @@ public class MainCommand implements CommandExecutor, TabCompleter {
     @Override
     public @NotNull List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, @NotNull String[] args) {
         if (args.length == 1) {
-            return List.of("reload", "editmessage");
+            return Arrays.asList("reload", "editmessage");
         } else if (args.length == 2 && sender.hasPermission("rediseconomy.admin.editmessage")) {
-            return Arrays.stream(plugin.getConfigManager().getLangs().getClass().getFields()).filter(field -> field.getType().equals(String.class)).map(Field::getName).toList();
+            return Arrays.stream(plugin.getConfigManager().getLangs().getClass().getFields()).filter(field -> field.getType().equals(String.class)).map(Field::getName).collect(Collectors.toList());
         }
-        return List.of();
+        return Collections.emptyList();
     }
 }
